styles/scss/vtex.flex-layout.scss
/* ... */
.flexCol--recommended-you {
  max-width: 1275px;
  margin: 0 auto;
}
.flexRow--search-info-mobile {
  background: #fff;
  box-shadow: 0 3px 6px rgb(0 0 0 / 5%);
  width: 114%;
  position: relative;
  right: 10%;
}
.flexRowContent--search-info-mobile {
  background: #fff;
  z-index: 2;
}
.flexRow--shelf-related-search {
  background: #fff;
  box-shadow: 0px -1px 6px #0000000a;
}
.flexRowContent--row-two-components {
  .stretchChildrenWidth {
    width: inherit !important;
    padding: 0 !important;
    :global(.vtex-product-quantity-1-x-quantitySelectorContainer--quantity) {
      min-width: 132px;
      width: 100%;
      border: 1px solid #da291c;
      border-radius: 22px !important;
      padding: 3px;
      // background: #fff;
      overflow: hidden;

      @media (min-width: em(640px)) {
        & {
          margin-right: 1em;
        }
      }
    }
  }

  :global(.vtex-button) {
    font-size: 14px;
    font-weight: 700;
    text-transform: capitalize;
    line-height: 20px;
    background-color: $primary;
    background-color: $secondary;
    height: 40px;
    color: $primary;
    background: $secondary;
    border-color: $secondary;
    border: 2px solid $secondary;

    &:disabled {
      display: none;
    }
  }
  :global(.vtex-minicartUnavailable) {
    :global(.vtex-button) {
      &:disabled {
        display: block;
        color: #fff;
      }
    }
  }
}

:global(.vtex-rich-text-0-x-wrapper--subtitle-atractive) {
  font-size: 18px;
  background-color: #fff !important;
  text-align: center;
  box-shadow: 0 3px 8px 0 rgba(135, 139, 169, 0.2);
  width: 100%;
}

:global(.vtex-rich-text-0-x-container--title-gray) {
  background-color: #cccccc;
  margin-top: 20px;
}

:global(.vtex-rich-text-0-x-paragraph--title-gray) {
  font-size: 14px;
  margin-bottom: 2px;
  letter-spacing: 1px;
}

:global(.vtex-flex-layout-0-x-flexRowContent--two-cols) {
  padding-top: 10px;
  padding-right: 20px;

  @media screen and (max-width: em(768px)) {
    /*width: 100%;
    height: 150px;
    margin-bottom: 10px;*/
    width: 100%;
    height: auto;
    margin-bottom: 10px;
    display: inline-flex;
  }
}

:global(.vtex-flex-layout-0-x-flexRowContent--two-cols-fb) {
  border-radius: 4.3px;
  box-shadow: 0 3px 8px 0 rgb(135 139 169 / 20%);
  background-color: #fff;
  width: 310px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 20px;
  padding-right: 20px;
  height: auto;
  @media screen and (max-width: em(1024px)) {
    width: 100%;
    height: 150px;
    margin-bottom: 10px;
  }
}

.flexRowContent--two-cols {
  @media screen and (max-width: em(768px)) {
    :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
      &:first-child {
        width: auto !important;
        text-align: center;
        width: 80px !important;
      }
      &:last-child {
        .flexColChild--block-service {
          justify-content: center;
          min-width: 209px;
        }
      }
      text-align: center;
    }
  }
}

:global(.vtex-rich-text-0-x-paragraph--sub-service) {
  font-size: 14px;
  margin-top: 5px;
  margin-bottom: 3px;
  line-height: 15px;
  @media screen and (max-width: 40em) {
    font-size: 13px !important;
  }
}

:global(.vtex-rich-text-0-x-paragraph--see-more-service) {
  margin-top: 0px;
  margin-bottom: 3px;
  font-size: 12px;
  color: #fe1d00;
  text-decoration: underline;
  cursor: pointer;
  :first-child {
    color: #fe1d00;
  }
}

.flexRow--row-services {
  padding-top: 1em;
  padding-bottom: 1em;
  background-color: #fafafa;

  :global(.vtex-store-components-3-x-container) {
    width: 1126px;
    box-shadow: 0px 3px 6px #0000000a;
    border-radius: 5px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: #fff;

    @media screen and (max-width: em(1024px)) {
      width: 80%;
    }
  }
}

.flexColChild--block-method {
  padding-top: 3px;
  padding-bottom: 3px;
  background-color: #fff;
  width: 88px;
  text-align: center;
  border-radius: 4px;
  @media screen and (max-width: em(768px)) {
    width: 100%;
  }
}

:global(.vtex-store-components-3-x-imageElement--image-method) {
  vertical-align: middle;
}

:global(.vtex-flex-layout-0-x-flexColChild--) {
  background-color: #fedd00;
}
:global(.vtex-store-components-3-x-imageElement--seven) {
  width: 25px;
}

:global(.vtex-store-components-3-x-imageElement--paypal) {
  width: 46px;
}

:global(.vtex-product-summary-2-x-brandName) {
  text-transform: capitalize !important;
  font-size: 14px;
  font-weight: 400;
  color: #525252;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  font-family: OpenSans;

  @media screen and (max-width: 767px) {
    font-size: 10px;
    font-weight: 400;
  }
}
.flexCol--card-payment {
  max-width: 300px;
  margin: 0 10px;
  box-shadow: 0px 3px 6px #00000014;
  padding: 20px;
  height: max-content;
  min-height: 380px;
  :global(.vtex-rich-text-0-x-list) {
    padding-left: 20px;
    color: #525252;
    font-size: 14px;
  }
  @media (max-width: 768px) {
    :global(.vtex-rich-text-0-x-strong) {
      font-size: 20px;
      margin-bottom: 31px;
    }
    max-width: 100%;
    margin: 0;
    background: #fff;
    margin-bottom: 37px;
  }
}

@media screen and (max-width: 767px) {
  .flexRowContent--call-center-content {
    padding: 0 8px;
    margin: 0;
  }
}

:global(.vtex-product-summary-2-x-nameWrapper) {
  text-align: left;
  width: 100%;
}

:global(.vtex-add-to-cart-button-0-x-buttonText) {
  font-size: 16px;
  font-weight: bold;
}

:global(.vtex-shelf-1-x-slide) {
  :global(.vtex-button) {
    border-radius: 5px;
  }
}

:global(.vtex-store-components-3-x-sellingPriceValue) {
  margin-bottom: 4px;

  :global(.vtex-store-components-3-x-currencyContainer--summary) {
    font-size: 23px;
    font-weight: bold;
    color: #525252;

    @media screen and (max-width: 767px) {
      font-size: 14px;
      color: #525252;
    }
  }
}
/* ... */

